# llvmDataStructureAnalyzer

./: CMakeLists.txt  README.md
DataStructureAnalyzer/: #DataStructureAnalyzer.cpp#  CGAnalyzer.cpp  CGAnalyzer.cpp~  CMakeLists.txt  DataStructureAnalyzer.cpp  DataStructurePasses.h~
PointerStructureAnalysis/: #DataStructureAnalyzer.cpp#  CMakeLists.txt  PointerStructureAnalysis.cpp
